--- a/src/app/list-currency/detail-currency/detail-currency.component.html
+++ b/src/app/list-currency/detail-currency/detail-currency.component.html
@@ -8,12 +8,12 @@
       <ul>
           <li>code: {{currency?.code}}</li>
           <li>name: {{currency?.name}}</li>
-          <li>min_confirmations: {{currency?.min_confirmations}}</li>
-          <li>is_crypto: {{currency?.is_crypto}}</li>
-          <li>minimal_amount: {{currency?.minimal_amount}}</li>
-          <li>is_base_of_enabled_pair: {{currency?.is_base_of_enabled_pair}}</li>
-          <li>has_enabled_pairs: {{currency?.has_enabled_pairs}}</li>
-          <li>withdrawal_fee: {{currency?.withdrawal_fee}}</li>
+          <li>min confirmations: {{currency?.min_confirmations}}</li>
+          <li>is crypto: {{currency?.is_crypto}}</li>
+          <li>minimal amount: {{currency?.minimal_amount}}</li>
+          <li>is base of enabled pair: {{currency?.is_base_of_enabled_pair}}</li>
+          <li>has enabled pairs: {{currency?.has_enabled_pairs}}</li>
+          <li>withdrawal fee: {{currency?.withdrawal_fee}}</li>
         </ul>
   </div>
 </div>
